--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "node-sass": "^4.11.0"
+    "@babel/core": "^7.4.3",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.4.3",
+    "express": "^4.16.4",
+    "node-sass": "^4.11.0",
+    "nodemon": "^1.18.10"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "nodemon --exec babel-node init.js",
     "compile:sass": "node-sass FRONT/ASSETS/SASS/main.scss FRONT/ASSETS/CSS/style.css -w"
   },
   "repository": {
