--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.3",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "mongoose": "^5.4.22",
     "node-sass": "^4.11.0",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "pug": "^2.0.3"
   },
   "devDependencies": {},
   "scripts": {
